# ans-safety-validation

./: .envrc  .envrc-template  .gitignore  README.md  docker-compose.yaml  start-simulation.sh
docs/: Arena.md  Development.md  Evaluation.md  Installation.md  LaunchConfigurations.md  RosCommands.md  Training.md  Usage.md
environment-setup/: .rosinstall  Dockerfile  docker-compose.yaml
runtime/: .rosinstall  Dockerfile  build.sh  docker-compose.yaml  launch.sh  run.sh  shell.sh  train.sh
runtime/src/: .rosinstall
scripts/: build-image.sh  exec-container-shell.sh  launch-simulation.sh  run-container.sh  stop-container.sh
simulation-env/: Dockerfile  docker-compose.yaml  start-environment.sh
simulation-environment/: README.md  build.sh  docker-compose.yaml  launch-simulation.sh  setup.sh
src/flatland_agent_spawner/: CMakeLists.txt  package.xml
src/flatland_agent_spawner/launch/: launch_and_spawn.launch
src/flatland_agent_spawner/src/: spawn_pedestrians.py
src/pedestrian_controller/: CMakeLists.txt  package.xml
src/pedestrian_controller/config/: conestogo_office_world.yaml
src/pedestrian_controller/config/models/own/: mymodel.yaml  (+2 more)
src/pedestrian_controller/launch/: pedestrian_controller.launch
src/pedestrian_controller/src/: pedestrian_controller.py
src/training_coordinator/: CMakeLists.txt  commands.sh  package.xml
src/training_coordinator/config/ros/: logging.conf
src/training_coordinator/launch/: test_stablebaselines3.launch  train.launch
src/training_coordinator/launch/environments/: flatland.launch
src/training_coordinator/src/: pedestrian_controller.py  spawn_model.py  train.py  use_stable_baselines.py
src/training_coordinator/src/flatland/: env.py  model_mediator.py  observation_action_spaces.py  random_pose_generator.py  reward_calculator.py
src/training_coordinator/src/utils/: LogManager.py  stop_training_callback.py
src/training_coordinator/tests/: test_flatland_env.py
(+5 files in other folders)
